--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -460,6 +460,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mr-3 {
   margin-right: 0.75rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
+}
 .flex {
   display: flex;
 }
@@ -475,6 +481,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-8 {
   height: 2rem;
 }
+.h-16 {
+  height: 4rem;
+}
+.h-full {
+  height: 100%;
+}
 .w-3\/5 {
   width: 60%;
 }
@@ -487,11 +499,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-6\/12 {
   width: 50%;
 }
+.w-8 {
+  width: 2rem;
+}
 .max-w-screen-md {
   max-width: 768px;
 }
 .max-w-screen-lg {
   max-width: 1024px;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .flex-col {
   flex-direction: column;
@@ -502,11 +520,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .rounded {
   border-radius: 0.25rem;
 }
 .border {
   border-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-gray-primary {
   --tw-border-opacity: 1;
@@ -558,6 +582,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-blue-medium {
+  --tw-text-opacity: 1;
+  color: rgb(0 92 152 / var(--tw-text-opacity));
+}
+.text-black-light {
   --tw-text-opacity: 1;
   color: rgb(0 92 152 / var(--tw-text-opacity));
 }
